# Modern-Cpp-NMS

./: CMakeLists.txt  LICENSE  README.md  boxes.txt  boxes_nms.txt  example.cpp  nms.cpp  nms.hpp  plot.py
.github/workflows/: cmake.yml
